# HandGesture_Music

./: .replit  LICENSE  README.md  app.py  audio_engine.py  config.py  gesture_recognizer.py  gui_interface.py  hand_tracker.py  index.html  main.py  midi_generator.py  pyproject.toml  script.js
.config/pulse/: cookie
static/: script.js
templates/: index.html
