[project]
name = "motion-melody"
version = "0.1.0"
description = "Hand gesture controlled music app"
requires-python = ">=3.9,<3.10"

dependencies = [
    "mediapipe>=0.10.21",
    "mido>=1.3.3",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pygame>=2.6.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []